arrumando a disposição do h1 na tela

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </header>
     <main>
         <section class="boas_vindas">
-            <h1>Seja Bem-Vindo(a) ao Frontend Quiz</h1>
+            <h1> Seja bem vindo(a) ao <br>
+                <strong>Frontend Quiz!</strong>
+            </h1>
 
             <p>Escolha um assunto para começar</p>
         </section>
