Alteração do h1 no index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"rel="stylesheet">
+
     <title>Quiz App</title>
 </head>
 <body>
@@ -19,7 +23,7 @@
     </header>
     <main>
         <section class="boas_vindas">
-            <h1> Seja bem vindo(a) ao <br>
+            <h1> Bem vindo(a) ao <br>
                 <strong>Frontend Quiz!</strong>
             </h1>
 
