--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
         </section>
 
         <section class="assuntos">
-            <button>
+            <button class="botao_html">
                 <div>
                     <img src="/assets/images/icon-html.svg" alt="">
                 </div>
                 HTML
             </button>
 
-            <button>
+            <button class="botao_css">
                 <div>
                     <img src="/assets/images/icon-css.svg" alt="">
                 </div>
                 CSS
             </button>
 
-            <button>
+            <button class="botao_js">
                 <div>
                     <img src="/assets/images/icon-js.svg" alt="">
                 </div>
                 Javascript
             </button>
 
-            <button>
+            <button class="botao_acessibilidade">
                 <div>
                     <img src="/assets/images/icon-accessibility.svg" alt="">
                 </div>
