--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="quiz.css">
     <title>Quiz App</title>
 </head>
 <body>
-    
+    <header>
+        <div class="assunto">
+            <div class="assunto_icone">
+                <img src="../../assets/images/icon-accessibility.svg" alt="icone de acessibilidade">
+            </div>
+            <h1>Acessibilidade/h1>
+        </div>
+
+        <div class="tema">
+            <img src="../../assets/images/icon-sun-dark.svg" alt="icone do sol">
+            <button>
+                <div></div>
+            </button>
+            <img src="../../assets/images/icon-moon-dark.svg" alt="icone da lua">
+        </div>
+
+    </header>
 </body>
 </html>
