primeira parte do formulário das alternativas

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -24,5 +24,30 @@
         </div>
 
     </header>
+
+    <main>
+        <section class="perguntas">
+            <p> Questão 6 de 10</p>
+
+            <h2>Qual o significado de HTML?</h2>
+
+            <div class="barra_progrsso">
+
+            </div>
+        </section>
+
+        <section class="alternativas">
+            <form action="">
+                <label for="alternativa_a">
+                    <input type="radio" id="alternativa_a">
+
+                    <div>
+                        <span>A</span>
+                        Trainer Marking Language
+                    </div>
+                </label>
+            </form>
+        </section>
+    </main>
 </body>
 </html>
