parte final das alternativas finalizada e página finalizada

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -45,8 +45,37 @@
                         <span>A</span>
                         Trainer Marking Language
                     </div>
+
                 </label>
+                <label for="alternativa_b">
+                    <input type="radio" id="alternativa_b">
+
+                    <div>
+                        <span> B </span>
+                        Hyper Text Marketing Language
+                    </div>
+                </label>
+
+                <label for="alternativa_c">
+                    <input type="radio" id="alternativa_c">
+
+                    <div>
+                        <span> C </span>
+                        Hyper Text Markup Language
+                    </div>
+                </label>
+
+                <label for="alternativa_d">
+                    <input type="radio" id="alternativa_d">
+
+                    <div>
+                        <span> D </span>
+                        Hyper Text Markup Levele
+                    </div>
+                </label>
+
             </form>
+            <button>Enviar</button>
         </section>
     </main>
 </body>
