Estilização da página quase completa

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"rel="stylesheet">
     <link rel="stylesheet" href="quiz.css">
     <title>Quiz App</title>
 </head>
@@ -26,13 +29,13 @@
     </header>
 
     <main>
-        <section class="perguntas">
+        <section class="pergunta">
             <p> Questão 6 de 10</p>
 
             <h2>Qual o significado de HTML?</h2>
 
-            <div class="barra_progrsso">
-
+            <div class="barra_progresso">
+                <div></div>
             </div>
         </section>
 
@@ -70,7 +73,7 @@
 
                     <div>
                         <span> D </span>
-                        Hyper Text Markup Levele
+                        Hyper Text Markup Leveler
                     </div>
                 </label>
 
