Adicionado o efeito de seleção das alternativas

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -42,7 +42,7 @@
         <section class="alternativas">
             <form action="">
                 <label for="alternativa_a">
-                    <input type="radio" id="alternativa_a">
+                    <input type="radio" id="alternativa_a" name="alternativa">
 
                     <div>
                         <span>A</span>
@@ -51,7 +51,7 @@
 
                 </label>
                 <label for="alternativa_b">
-                    <input type="radio" id="alternativa_b">
+                    <input type="radio" id="alternativa_b" name="alternativa">
 
                     <div>
                         <span> B </span>
@@ -60,7 +60,7 @@
                 </label>
 
                 <label for="alternativa_c">
-                    <input type="radio" id="alternativa_c">
+                    <input type="radio" id="alternativa_c" name="alternativa">
 
                     <div>
                         <span> C </span>
@@ -69,8 +69,9 @@
                 </label>
 
                 <label for="alternativa_d">
-                    <input type="radio" id="alternativa_d">
-
+                    <label for="alternativa_d" >
+                        <input type="radio" id="alternativa_d" name="alternativa">
+    
                     <div>
                         <span> D </span>
                         Hyper Text Markup Leveler
