adicionado o efeito para alternativas corretas e erradas

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -41,7 +41,7 @@
 
         <section class="alternativas">
             <form action="">
-                <label for="alternativa_a">
+                <label for="alternativa_a" id="correta">
                     <input type="radio" id="alternativa_a" name="alternativa">
 
                     <div>
@@ -50,7 +50,7 @@
                     </div>
 
                 </label>
-                <label for="alternativa_b">
+                <label for="alternativa_b" id="errada">
                     <input type="radio" id="alternativa_b" name="alternativa">
 
                     <div>
