--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -30,11 +30,14 @@
 
     <main>
         <section class="pergunta">
-            <p> Questão 6 de 10</p>
+            <div>
 
-            <h2>Qual o significado de HTML?</h2>
-
-            <div class="barra_progresso">
+                    <p> Questão 6 de 10</p>
+    
+                    <h2>Qual o significado de HTML?</h2>
+                </div>
+                
+                <div class="barra_progresso">
                 <div></div>
             </div>
         </section>
