ajuste das cores no tema dark

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="quiz.css">
     <title>Quiz App</title>
 </head>
-<body>
+<body class="escuro">
     <header>
         <div class="assunto">
             <div class="assunto_icone">
@@ -36,7 +36,7 @@
     
                     <h2>Qual o significado de HTML?</h2>
                 </div>
-                
+
                 <div class="barra_progresso">
                 <div></div>
             </div>
