--- a/pages/resultado/resultado.html
+++ b/pages/resultado/resultado.html
@@ -36,7 +36,7 @@
     <main>
         <h2>
             Quiz completo <br>
-            <strong>Sua pontuação...</strong>
+            <strong>Seus pontos...</strong>
         </h2>
 
         <section class="pontuacao">
