--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Quiz App</title>
 </head>
-<body class="escuro">
+<body>
     <header>
         <div class="tema">
             <img src="./assets/images/icon-sun-dark.svg" alt="sol">
