--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"rel="stylesheet">
     <link rel="stylesheet" href="quiz.css">
+    <script src="quiz.js" type="module" defer></script>
     <title>Quiz App</title>
 </head>
 <body>
