alteração dinâmica do assunto da página

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
             <button class="botao_js">
                 <div>
-                    <img src="/assets/images/icon-js.svg" alt="">
+                    <img src="/assets/images/icon-javascript.svg" alt="">
                 </div>
                 Javascript
             </button>
 
             <button class="botao_acessibilidade">
                 <div>
-                    <img src="/assets/images/icon-accessibility.svg" alt="">
+                    <img src="./assets/images/icon-accessibilidade.svg" alt="icone da Acessibilidade">
                 </div>
                 Acessibilidade
             </button>
