--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -14,9 +14,9 @@
     <header>
         <div class="assunto">
             <div class="assunto_icone">
-                <img src="../../assets/images/icon-accessibility.svg" alt="icone de acessibilidade">
+                <img src="" alt="">
             </div>
-            <h1>Acessibilidade/h1>
+            <h1></h1>
         </div>
 
         <div class="tema">
