--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="quiz.css">
     <script src="quiz.js" type="module" defer></script>
     <title>Quiz App</title>
@@ -13,24 +13,27 @@
 <body>
     <header>
         <div class="assunto">
+
             <div class="assunto_icone">
                 <img src="" alt="">
             </div>
+
             <h1></h1>
         </div>
 
         <div class="tema">
+
             <img src="../../assets/images/icon-sun-dark.svg" alt="icone do sol">
+
             <button>
                 <div></div>
             </button>
+
             <img src="../../assets/images/icon-moon-dark.svg" alt="icone da lua">
         </div>
-
     </header>
 
     <main>
-        
     </main>
 </body>
 </html>
