--- a/pages/resultado/resultado.html
+++ b/pages/resultado/resultado.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="resultado.css">
     <title>Quiz App</title>
 </head>
-<body class="escuro">
+<body>
     <header>
         <div class="assunto">
 
@@ -39,23 +39,13 @@
             <strong>Seus pontos...</strong>
         </h2>
 
-        <section class="pontuacao">
+        <div>
+            <section class="pontuacao">
+                
+            </section>
 
-            <div class="assunto">
-
-                <div class="assunto_icone">
-                    <img src="../../assets/images/icon-accessibility.svg" alt="icone de acessibilidade">
-                </div>
-
-                <h1>Acessibilidade</h1>
-            </div>
-
-            <strong>8</strong>
-            <p>de 10</p>
-        </section>
-
-        <button>Jogar novamente</button>
+            <button>Jogar novamente</button>
+        </div>
     </main>
-
 </body>
 </html>
