--- a/index.html
+++ b/index.html
@@ -1,71 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="./script.js" type="module" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
+        <script src="./script.js" type="module" defer></script>
     <title>Quiz App</title>
 </head>
+
 <body>
     <header>
-
         <div class="tema">
-
             <img src="./assets/images/icon-sun-dark.svg" alt="icone do sol">
-
             <button>
                 <div></div>
             </button>
-
             <img src="./assets/images/icon-moon-dark.svg" alt="icone da lua">
         </div>
+
     </header>
 
     <main>
-
         <section class="boas_vindas">
-            <h1>
-                Bem-vindo(a) ao <br>
-                <strong>Frontend Quiz!</strong></h1>
+            <h1> Bem vindo(a) ao <br>
+                <strong>Frontend Quiz!</strong>
+            </h1>
 
             <p>Escolha um assunto para começar.</p>
-
         </section>
 
         <section class="assuntos">
-
             <button class="botao_html">
                 <div>
-                    <img src="./assets/images/icon-html.svg" alt="icone do HTML">
+                    <img src="./assets/images/icon-html.svg" alt="icon html">
                 </div>
                 <span>HTML</span>
             </button>
-
             <button class="botao_css">
                 <div>
-                    <img src="./assets/images/icon-css.svg" alt="icone do CSS">
+                    <img src="./assets/images/icon-css.svg" alt="icon css">
                 </div>
                 <span>CSS</span>
             </button>
-
-            <button class="botao_javascript">
+            <button class="botao_js">
                 <div>
-                    <img src="./assets/images/icon-javascript.svg" alt="icone do Javascript">
+                    <img src="./assets/images/icon-javascript.svg" alt="icon javascript">
                 </div>
                 <span>Javascript</span>
             </button>
-
             <button class="botao_acessibilidade">
                 <div>
-                    <img src="./assets/images/icon-accessibilidade.svg" alt="icone da Acessibilidade">
+                    <img src="./assets/images/icon-acessibilidade.svg" alt="icon acessibilidade">
                 </div>
                 <span>Acessibilidade</span>
             </button>
         </section>
     </main>
+
 </body>
+
 </html>
