--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -15,7 +15,7 @@
         <div class="assunto">
 
             <div class="assunto_icone">
-                <img src="" alt="">
+                <img src="../../assets/images/icon-accessibilidade.svg" alt="icone de acessibilidade">
             </div>
 
             <h1></h1>
